Update Chat Buttons and Home Backg
Background of the home page and chat control buttons changed

Co-Authored-By: Carmen Sáez <177135732+catyn04@users.noreply.github.com>

--- a/frontend/src/components/common/Button.module.css
+++ b/frontend/src/components/common/Button.module.css
@@ -2,7 +2,8 @@
   width: 86px;
   height: 32px;
   border-radius: 4px;
-  background: radial-gradient(109.81% 107.82% at 100.1% 90.19%, #0f6cbd 33.63%, #2d87c3 70.31%, #8dddd8 100%);
+  background-color: #070034;
+  /* background: radial-gradient(109.81% 107.82% at 100.1% 90.19%, #0f6cbd 33.63%, #2d87c3 70.31%, #8dddd8 100%); */
   padding: 5px 12px;
 }
 
@@ -25,6 +26,13 @@
 .historyButtonRoot {
   width: 180px;
   border: 1px solid #d1d1d1;
+  border-radius: 4px;
+  color:white;
+  background-color: #070034;
+}
+ 
+.historyButtonRoot span {
+  color:white;
 }
 
 .historyButtonRoot:hover {
