--- a/frontend/src/pages/chat/Chat.module.css
+++ b/frontend/src/pages/chat/Chat.module.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  background-color: #313158;
 }
 
 .chatRoot {
@@ -20,7 +21,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: radial-gradient(108.78% 108.78% at 50.02% 19.78%, #ffffff 57.29%, #eef6fe 100%);
+  background-color:#070034;
+  color:white;
+  /* background: radial-gradient(108.78% 108.78% at 50.02% 19.78%, #ffffff 57.29%, #eef6fe 100%); */
   box-shadow:
     0px 2px 4px rgba(0, 0, 0, 0.14),
     0px 0px 2px rgba(0, 0, 0, 0.12);
@@ -58,7 +61,7 @@
   align-items: flex-end;
   text-align: center;
   letter-spacing: -0.01em;
-  color: #616161;
+  color: #f69300;
 }
 
 .chatIcon {
@@ -148,7 +151,9 @@
   margin-bottom: 50px;
   margin-top: 8px;
 }
-
+.icon-105 {
+  color:black !important;
+}
 .clearChatBroom {
   box-sizing: border-box;
   display: flex;
@@ -160,9 +165,10 @@
   height: 40px;
   left: 7px;
   top: 13px;
-  color: #ffffff;
+  color: black;
   border-radius: 4px;
   z-index: 1;
+  /* background-color: #a1dc00; */
 }
 
 .clearChatBroomNoCosmos {
@@ -176,9 +182,10 @@
   height: 40px;
   left: 7px;
   top: 66px;
-  color: #ffffff;
+  color: black;
   border-radius: 4px;
   z-index: 1;
+  /* background-color: #a1dc00; */
 }
 
 .newChatIcon {
@@ -192,9 +199,10 @@
   height: 40px;
   left: 7px;
   top: 66px;
-  color: #ffffff;
+  color: black;
   border-radius: 4px;
   z-index: 1;
+  /* background-color: #a1dc00; */
 }
 
 .stopGeneratingContainer {
