--- a/frontend/src/pages/chat/Chat.module.css
+++ b/frontend/src/pages/chat/Chat.module.css
@@ -185,7 +185,7 @@
   color: black;
   border-radius: 4px;
   z-index: 1;
-  /* background-color: #a1dc00; */
+  background-color: #a1dc00;
 }
 
 .newChatIcon {
