--- a/tests/integration_tests/dotenv_templates/dotenv.jinja2
+++ b/tests/integration_tests/dotenv_templates/dotenv.jinja2
@@ -1,7 +1,9 @@
 DATASOURCE_TYPE={{ DATASOURCE_TYPE }}
 AZURE_OPENAI_ENDPOINT={{ AZURE_OPENAI_ENDPOINT }}
 AZURE_OPENAI_MODEL={{ AZURE_OPENAI_MODEL }}
+{% if not USE_MI %}
 AZURE_OPENAI_KEY={{ AZURE_OPENAI_KEY }}
+{% endif %}
 AZURE_OPENAI_TEMPERATURE=0
 AZURE_OPENAI_TOP_P=1.0
 AZURE_OPENAI_MAX_TOKENS=1000
@@ -14,7 +16,9 @@ AZURE_OPENAI_EMBEDDING_NAME={{ AZURE_OPENAI_EMBEDDING_NAME }}
 {% endif %}
 {% if USE_AOAI_EMBEDDINGS %}
 AZURE_OPENAI_EMBEDDING_ENDPOINT={{ AZURE_OPENAI_ENDPOINT }}/openai/deployments/ada/embeddings?api-version=2023-03-15-preview
+{% if not USE_MI %}
 AZURE_OPENAI_EMBEDDING_KEY={{ AZURE_OPENAI_KEY }}
+{% endif %}
 {% endif %}
 {% if ENABLE_CHAT_HISTORY %}
 AZURE_COSMOSDB_ACCOUNT={{ AZURE_COSMOSDB_ACCOUNT }}
