--- a/frontend/src/components/PdfModal/PdfModal.module.css
+++ b/frontend/src/components/PdfModal/PdfModal.module.css
@@ -31,7 +31,8 @@
   max-width: 100%;
   max-height: 100%;
   border: none;
-  flex: 1;
+  flex: auto;
+  width: -webkit-fill-available;
 }
 
 .error {
