--- a/frontend/src/pages/chat/Chat.module.css
+++ b/frontend/src/pages/chat/Chat.module.css
@@ -119,13 +119,26 @@
   box-shadow:
     rgba(182, 52, 67, 1) 1px 1px 2px,
     rgba(182, 52, 67, 1) 0px 0px 1px;
-  color: #242424;
+  color: black;
   flex: none;
   order: 0;
   flex-grow: 0;
   max-width: 800px;
   margin-bottom: 12px;
   background-color: white;
+}
+
+.chatMessageErrorTitle {
+  font-family: 'Segoe UI';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 22px;
+  white-space: pre-wrap;
+  word-wrap: break-word;
+  gap: 12px;
+  align-items: center;
+  color:red;
 }
 
 .chatMessageErrorContent {
