--- a/frontend/src/pages/chat/Chat.module.css
+++ b/frontend/src/pages/chat/Chat.module.css
@@ -103,6 +103,7 @@
 
 .faqOption:hover {
   background-color: rgb(74, 77, 150);
+  /* background-color: rgb(190, 191, 210); */
 }
 
 .faqOptionText {
