--- a/frontend/src/components/Answer/Answer.module.css
+++ b/frontend/src/components/Answer/Answer.module.css
@@ -9,6 +9,7 @@
     0px 1px 2px rgba(0, 0, 0, 0.14),
     0px 0px 2px rgba(0, 0, 0, 0.12);
   border-radius: 5.419px;
+  /* overflow: hidden; */
 }
 
 .answerText {
@@ -76,6 +77,7 @@ height: 16px;
   flex-flow: wrap column;
   max-height: 150px;
   gap: 4px;
+  overflow: auto;
 }
 
 .citationContainer {
