Added hover effect to page btn

--- a/frontend/src/pages/chat/Chat.module.css
+++ b/frontend/src/pages/chat/Chat.module.css
@@ -427,6 +427,9 @@ background-color: #948cff;
   cursor: pointer;
 }
 
+.citationPdfPageButton:hover {
+  background-color: #a9ff00;
+}
 
 .exectResultList {
   display: flex;
