--- a/frontend/src/components/QuestionInput/QuestionInput.module.css
+++ b/frontend/src/components/QuestionInput/QuestionInput.module.css
@@ -1,5 +1,5 @@
 .questionInputContainer {
-  height: 120px;
+  height: 145px;
   position: absolute;
   left: 6.5%;
   right: 0%;
@@ -15,16 +15,13 @@
 .questionInputTextArea {
   width: 100%;
   line-height: 40px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  margin-left: 12px;
-  margin-right: 12px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 12px;
+  padding-right: 12px;
 }
 
 .questionInputSendButtonContainer {
-  position: absolute;
-  right: 24px;
-  bottom: 20px;
   z-index: 2;
 }
 
@@ -66,9 +63,6 @@
 }
 
 .fileInput {
-  position: absolute;
-  left: 20px;
-  bottom: 20px;
   z-index: 1;
 }
 
@@ -109,4 +103,13 @@ input.fileInput::file-selector-button {
 
 .textAreaOverrides {
   font-size: 16px !important;
+}
+
+.questionInputChatButtons {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding-right: 16px;
+  padding-left: 16px;
 }
