--- a/frontend/src/pages/chat/Chat.module.css
+++ b/frontend/src/pages/chat/Chat.module.css
@@ -1,10 +1,3 @@
-/* .container {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-} */
-
 .container {
   display: flex;
   flex-direction: column;
@@ -421,17 +414,6 @@ a {
   cursor: pointer;
 }
 
-.verificationTextContainer {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  margin-bottom: 0px;
-}
-
-.verificationText {
-  font-size: 14px;
-  color: #668;
-}
 
 @media (max-width: 480px) {
 
@@ -442,15 +424,13 @@ a {
   }
 
   .chatContainer {
-    max-height: calc(100vh - 60px); /* Adjust height */
+    max-height: calc(100vh - 60px); 
   }
 
   .chatInput {
     width: 100%;
-    /* max-width: 100%;  */
     padding-left: 0px;
     padding-right: 0px;
-    /* /* box-sizing: border-box;  */
   }
 
   .newChatIcon, .clearChatBroom, .clearChatBroomNoCosmos {
