--- a/frontend/src/pages/layout/Layout.module.css
+++ b/frontend/src/pages/layout/Layout.module.css
@@ -7,7 +7,7 @@
 .header {
   /* background-color: #f2f2f2; */
   /* background-color: rgb(152, 153, 169); */
-  background-image: linear-gradient(to right, #5b5ba4, #6990b5, #7acb00, #5b5ba4);
+  background-color: #d0d3d8;
 }
 
 .headerContainer {
