--- a/frontend/src/components/common/Button.module.css
+++ b/frontend/src/components/common/Button.module.css
@@ -144,7 +144,7 @@
 .buttonStructure {
   border-radius: 10px !important;
   background-image: linear-gradient(to bottom right, #47396a, #6b509e, #d19bd6 ) !important;
-  color: white !important
+  color: white
 }
 
 .buttonStructure:hover {
