--- a/frontend/src/pages/chat/Chat.module.css
+++ b/frontend/src/pages/chat/Chat.module.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
-  background-color: #ececec;
+  background-color: #cbe5ff;
 }
 
 .chatRoot {
@@ -335,7 +335,7 @@
   align-items: flex-start;
   padding: 16px 16px;
   gap: 8px;
-  background: #5a5aa3;
+  background: #bbd8ed;
   box-shadow:
     0px 2px 4px rgba(0, 0, 0, 0.14),
     0px 0px 2px rgba(0, 0, 0, 0.12);
@@ -358,7 +358,7 @@
   font-weight: 600;
   font-size: 18px;
   line-height: 24px;
-  color: #fff;
+  color: #000000;
   flex: none;
   order: 0;
   flex-grow: 0;
@@ -380,7 +380,7 @@
   font-weight: 600;
   font-size: 16px;
   line-height: 22px;
-  color: #fff;
+  color: #000000;
   margin-top: 12px;
   margin-bottom: 12px;
 }
@@ -395,7 +395,7 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
-  color: #fff;
+  color: #000000;
   flex: none;
   order: 1;
   align-self: stretch;
