Update text colors

--- a/frontend/src/components/common/Button.module.css
+++ b/frontend/src/components/common/Button.module.css
@@ -112,6 +112,12 @@
   width: 100%;
 }
 
+.citationPageButtonContainer {
+  display: flex;
+  align-items: center;
+  color: black;
+}
+
 .citationPdfPageButton {
   height: 2rem;
   width: 2rem;
