--- a/frontend/src/pages/chat/Chat.module.css
+++ b/frontend/src/pages/chat/Chat.module.css
@@ -335,7 +335,7 @@
   align-items: flex-start;
   padding: 16px 16px;
   gap: 8px;
-  background: #bbd8ed;
+  background: #d6ecfb;
   box-shadow:
     0px 2px 4px rgba(0, 0, 0, 0.14),
     0px 0px 2px rgba(0, 0, 0, 0.12);
@@ -410,12 +410,6 @@
   padding: 6px 10px 6px 6px;
   border-radius: 8px;
   width: 100%;
-}
-
-.citationPageButtonContainer {
-  display: flex;
-  align-items: center;
-  color: #fff
 }
 
 .exectResultList {
