Searchbar border deleted

--- a/frontend/src/components/Sidebar/Sidebar.module.css
+++ b/frontend/src/components/Sidebar/Sidebar.module.css
@@ -30,7 +30,7 @@ css-dip3t8::-webkit-scrollbar-thumb {
   width: 100%;
   padding: 4px;
   border-radius: 10px;
-  border: 1px solid #ccc;
+  border: 1px solid #fff;
   padding: 14px;
 }
 
